<resources>
    <string name="app_name">Cricket Counter</string>
    <string name="team_a_name">Team A</string>
    <string name="team_b_name">Team B</string>
    <string name="number_of_overs">Number Of Overs</string>
    <string name="submit">Submit</string>
    <string name="team_a_score">Team A Score</string>
    <string name="team_a_overs">Team A Overs</string>
    <string name="_0_run">0 Run</string>
    <string name="_1_run">1 Run</string>
    <string name="_2_runs">2 Runs</string>
    <string name="_3_runs">3 Runs</string>
    <string name="_4_runs">4 Runs</string>
    <string name="_6_runs">6 Runs</string>
    <string name="wicket">Wicket</string>
    <string name="no_ball">No Ball</string>
    <string name="wide_ball">Wide Ball</string>
    <string name="who_will_bat_first">Who Will Bat First?</string>
    <string name="team_b_score">Team B Score</string>
    <string name="team_b_overs">Team B Overs</string>
    <string name="textView_greetings">We\'ll just need a few details before starting the count!</string>
    <string name="_1st_innings_are_over">1st innings are over!</string>
    <string name="continue_text">Continue</string>
    <string name="wins">Wins</string>
    <string name="new_game">New Game</string>
    <string name="number_of_wickets_each">Number of Wickets Each</string>
</resources>